--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,14 @@
       <version>1.7.0</version>
     </dependency>
     <dependency>
-      <groupId>avalon-framework</groupId>
-      <artifactId>avalon-framework</artifactId>
-      <version>4.0</version>
+      <groupId>org.apache.avalon.framework</groupId>
+      <artifactId>avalon-framework-api</artifactId>
+      <version>4.3.1</version>
     </dependency>
     <dependency>
-      <groupId>batik</groupId>
-      <artifactId>batik</artifactId>
-      <version>1.5-fop-0.20-5</version>
+      <groupId>org.apache.avalon.framework</groupId>
+      <artifactId>avalon-framework-impl</artifactId>
+      <version>4.3.1</version>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
@@ -67,9 +67,9 @@
       <version>1.10.0</version>
     </dependency>
     <dependency>
-      <groupId>fop</groupId>
+      <groupId>org.apache.xmlgraphics</groupId>
       <artifactId>fop</artifactId>
-      <version>0.20.5</version>
+      <version>2.8</version>
     </dependency>
     <dependency>
       <groupId>jmock</groupId>
@@ -195,11 +195,13 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0</version>
       </plugin>
+      <!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.0.0</version>
       </plugin>
+      -->
     </plugins>
   </build>
   <repositories>
