--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,13 @@
       <groupId>org.apache.avalon.framework</groupId>
       <artifactId>avalon-framework-api</artifactId>
       <version>4.3.1</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.apache.avalon.framework</groupId>
       <artifactId>avalon-framework-impl</artifactId>
       <version>4.3.1</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
@@ -70,16 +72,7 @@
       <groupId>org.apache.xmlgraphics</groupId>
       <artifactId>fop</artifactId>
       <version>2.8</version>
-    </dependency>
-    <dependency>
-      <groupId>jmock</groupId>
-      <artifactId>jmock</artifactId>
-      <version>1.0.1</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -90,21 +83,25 @@
       <groupId>opensymphony</groupId>
       <artifactId>sitemesh</artifactId>
       <version>2.2.1</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>poi</groupId>
       <artifactId>poi</artifactId>
       <version>2.5.1</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>javax.servlet.jsp-api</artifactId>
       <version>2.3.3</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.taglibs</groupId>
@@ -117,29 +114,28 @@
       <version>1.2.5</version>
     </dependency>
     <dependency>
-      <groupId>xdoclet</groupId>
-      <artifactId>xdoclet</artifactId>
-      <version>1.2.3</version>
-    </dependency>
-    <dependency>
-      <groupId>xdoclet</groupId>
-      <artifactId>xdoclet-web-module</artifactId>
-      <version>1.2.3</version>
-    </dependency>
-    <dependency>
-      <groupId>xdoclet</groupId>
-      <artifactId>xjavadoc</artifactId>
-      <version>1.1</version>
-    </dependency>
-    <dependency>
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
       <version>2.12.2</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>xml-apis</groupId>
       <artifactId>xml-apis</artifactId>
       <version>1.4.01</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>jmock</groupId>
+      <artifactId>jmock</artifactId>
+      <version>1.2.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <properties>
