--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>org.opennms.extremecomponents</groupId>
   <artifactId>extremecomponents</artifactId>
   <name>eXtremeComponents</name>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.0.1</version>
   <inceptionYear>2004</inceptionYear>
   <description>A direct port of extremecomponents 1.0.1 to modern dependencies.</description>
   <url>https://github.com/OpenNMS/extremecomponents</url>
